feat: update profile information, update media file for avatar changes
