# swagger/v1/swagger.yaml
@@ -26,8 +26,10 @@ paths:
                   properties:
                     email:
                       type: string
+                      default: 12a1tranphamtuan69@gmail.com
                     password:
                       type: string
+                      default: string
                   required:
                   - email
                   - password
@@ -111,6 +113,8 @@ paths:
       summary: Get Profile by Host
       tags:
       - Profiles
+      security:
+      - Bearer: []
       parameters:
       - name: user_id
         in: path
@@ -125,6 +129,8 @@ paths:
       summary: Get Profile by Guest
       tags:
       - Profiles
+      security:
+      - Bearer: []
       parameters:
       - name: user_id
         in: path
@@ -134,6 +140,106 @@ paths:
       responses:
         '200':
           description: successful
+  "/api/v1/profiles/avatar/{user_id}":
+    get:
+      summary: Get Profile Avatar
+      tags:
+      - Profiles
+      security:
+      - Bearer: []
+      parameters:
+      - name: user_id
+        in: path
+        required: true
+        schema:
+          type: integer
+      responses:
+        '200':
+          description: successful
+    patch:
+      summary: Update Avatar
+      tags:
+      - Profiles
+      security:
+      - Bearer: []
+      parameters:
+      - name: user_id
+        in: path
+        required: true
+        schema:
+          type: integer
+      responses:
+        '200':
+          description: successful
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              type: object
+              properties:
+                raw_avatar_data:
+                  type: string
+                  format: binary
+              required:
+              - raw_avatar_data
+  "/api/v1/profiles/update/{user_id}":
+    patch:
+      summary: Update Profile
+      tags:
+      - Profiles
+      security:
+      - Bearer: []
+      parameters:
+      - name: user_id
+        in: path
+        required: true
+        schema:
+          type: integer
+      responses:
+        '200':
+          description: successful
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                first_name:
+                  type: string
+                last_name:
+                  type: string
+                bio:
+                  type: string
+                dob:
+                  type: string
+                  format: date
+                gender:
+                  type: integer
+                relationship_status:
+                  type: integer
+                status:
+                  type: integer
+                allow_direct_follows:
+                  type: boolean
+                is_gender_public:
+                  type: boolean
+                is_email_public:
+                  type: boolean
+                is_rel_status_public:
+                  type: boolean
+              required:
+              - first_name
+              - last_name
+              - bio
+              - dob
+              - gender
+              - relationship_status
+              - status
+              - avatar_data
+              - allow_direct_follows
+              - is_gender_public
+              - is_email_public
+              - is_rel_status_public
   "/api/v1/users/me":
     patch:
       summary: Change User Langue
